<resources>
    <string name="app_name">What Is Your Stripper Name</string>
    <string name="title1text">What is your</string>
    <string name="title2text">STRIPPER NAME</string>
    <string name="name1titletext">First Name</string>
    <string name="first_stripper_name">Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade   Fantasia   Chesty   Starr   Diamond   Montana   Angel   Sugar Mimi   Lola   Kitty   Roxie   Dallas
        Princess   Heidi   Bambi   Bunny   Brandy  Sugar   Candy   Raquelle   Sapphire   Cinnamon   Blaze   Trixie   Isis   Jade
    </string>
    <string name="name2">Second Name</string>
    <string name="second_name_text">Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber   Leather   Dream   Sunny   Deep   Heaven   Tight   Shimmer   velvet   Lusty   Harley   Passion   Dazzle
        Dixon   Spank   Glitter   Razor   Meadow   Glitz   Sparkle   Sweet   Silver   Tickle   Cherry   Hard   Night   Amber
    </string>
    <string name="last_name_string_text">Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
           Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice   Hooter   Horn   Tower   Fire   Thighs   Hips   Side   Jugs   Shock   Cocker   Brook   Tush   Sizzle
        Kiss   Bomb   Cream   Thong   Heat   Whip   Cheeks   Rock   Hiney   Button   Lick   Juice
    </string>
    <string name="last_name_text">Last Name</string>
    <string name="last_name_text_lolol">TextView</string>
</resources>
